[tool.poetry]
name = "crl-checker"
version = "0.0.0"
description = "Check if certificate is revoked using the x509 CRL extension"
authors = ["Michal Sadowski <misad90@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 — Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
cryptography = "^39.0.1"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.black]
line_length = 79

[tool.pytest.ini_options]
addopts = "--cov=crl_checker --cov-report term-missing --cov-report=html -v"
